[package]
name = "deutsche-bahn-delay-reasons"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = "Get some reasons why your Deutsche Bahn train is late. Supports random reason generation."
license-file = "LICENSE"
repository = "https://github.com/barafael/deutsche-bahn-delay-reasons"
version = "0.2.0"
edition = "2018"

[dependencies]
enum_index = "0.2.0"
enum_index_derive = "0.2.0"

getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"
thiserror = "1.0.26"
variant_count = "1.1.0"
