[package]
name = "deutsche-bahn-delay-reasons"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = "Get some reasons why your Deutsche Bahn train is late. Supports random reason generation."
license-file = "LICENSE"
repository = "https://github.com/barafael/deutsche-bahn-delay-reasons"
version = "1.0.0"
edition = "2024"

[features]
inofficial = []

[dependencies]
rand = "0.9"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
strum_macros = "0.27.2"
thiserror = "2"
